package main

import (
	"fmt"
	"log"
	"math"
	"net/http"
	"sync"
	"time"

	// –£–±–µ–¥–∏—Å—å, —á—Ç–æ –∏–º–ø–æ—Ä—Ç —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É–µ—Ç —Ç–≤–æ–µ–º—É go.mod
	pb "clash-server/pb"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"
)

// --- CONFIGURATION ---
const (
	writeWait      = 10 * time.Second
	pongWait       = 60 * time.Second
	pingPeriod     = (pongWait * 9) / 10
	maxMessageSize = 4096 // 4KB limit for protobuf
)

var upgrader = websocket.Upgrader{
	ReadBufferSize:  1024,
	WriteBufferSize: 1024,
	CheckOrigin: func(r *http.Request) bool {
		return true // Allow all origins for development
	},
}

// --- STRUCTURES ---

type Player struct {
	Conn     *websocket.Conn
	ID       string
	Trophies int32
	// –ö–∞–Ω–∞–ª –¥–ª—è –ø—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ–≥–æ –∑–∞–∫—Ä—ã—Ç–∏—è (–µ—Å–ª–∏ –∑–∞—à–ª–∏ —Å –¥—Ä—É–≥–æ–≥–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞)
	closeChan chan struct{}
}

// SessionManager –∫–æ–Ω—Ç—Ä–æ–ª–∏—Ä—É–µ—Ç —É–Ω–∏–∫–∞–ª—å–Ω–æ—Å—Ç—å –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–π –ø–æ ID
type SessionManager struct {
	sessions map[string]*Player
	mu       sync.RWMutex
}

// QueueManager —É–ø—Ä–∞–≤–ª—è–µ—Ç –æ—á–µ—Ä–µ–¥—å—é –ø–æ–∏—Å–∫–∞
type QueueManager struct {
	pool []*Player
	mu   sync.Mutex
}

// --- GLOBALS ---

var (
	sessions = SessionManager{
		sessions: make(map[string]*Player),
	}
	queue = QueueManager{
		pool: make([]*Player, 0),
	}
)

// --- MAIN ---

func main() {
	http.HandleFunc("/ws", handleConnections)

	log.Println("PRODUCTION SERVER STARTED :8080")
	log.Println("Mode: Protobuf | Strict Sessions | Graceful Cleanup")

	if err := http.ListenAndServe(":8080", nil); err != nil {
		log.Fatal("Server start failed:", err)
	}
}

// --- HANDLERS ---

func handleConnections(w http.ResponseWriter, r *http.Request) {
	ws, err := upgrader.Upgrade(w, r, nil)
	if err != nil {
		log.Println("Upgrade error:", err)
		return
	}

	// –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ª–∏–º–∏—Ç–æ–≤ –∏ —Ç–∞–π–º–∞—É—Ç–æ–≤ –¥–ª—è —Å–æ–∫–µ—Ç–∞ (Ping/Pong)
	ws.SetReadLimit(maxMessageSize)
	ws.SetReadDeadline(time.Now().Add(pongWait))
	ws.SetPongHandler(func(string) error {
		ws.SetReadDeadline(time.Now().Add(pongWait))
		return nil
	})

	// 1. –û–∂–∏–¥–∞–Ω–∏–µ handshake (JoinQueueRequest)
	// –ß–∏—Ç–∞–µ–º –ø–µ—Ä–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ, —á—Ç–æ–±—ã –ø–æ–Ω—è—Ç—å, –∫—Ç–æ —ç—Ç–æ.
	_, msg, err := ws.ReadMessage()
	if err != nil {
		log.Println("Handshake read error:", err)
		ws.Close()
		return
	}

	joinReq := &pb.JoinQueueRequest{}
	if err := proto.Unmarshal(msg, joinReq); err != nil {
		log.Println("Invalid Protobuf handshake:", err)
		ws.Close()
		return
	}

	if joinReq.PlayerId == "" {
		log.Println("Empty PlayerID rejected")
		ws.Close()
		return
	}

	player := &Player{
		Conn:      ws,
		ID:        joinReq.PlayerId,
		Trophies:  joinReq.Trophies,
		closeChan: make(chan struct{}),
	}

	// 2. –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —Å–µ—Å—Å–∏–∏ (–ö–∏–∫ –¥—É–±–ª–∏–∫–∞—Ç–æ–≤)
	// –ï—Å–ª–∏ —Ç–∞–∫–æ–π ID —É–∂–µ –µ—Å—Ç—å, —Å—Ç–∞—Ä–æ–µ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ –±—É–¥–µ—Ç —É–±–∏—Ç–æ.
	sessions.Register(player)

	// 3. CLEANUP DEFER (–°–∞–º–æ–µ –≤–∞–∂–Ω–æ–µ!)
	// –≠—Ç–∞ —Ñ—É–Ω–∫—Ü–∏—è –≤—ã–ø–æ–ª–Ω–∏—Ç—Å—è –í–°–ï–ì–î–ê –ø—Ä–∏ –≤—ã—Ö–æ–¥–µ –∏–∑ handleConnections.
	defer func() {
		log.Printf("Cleaning up player: %s", player.ID)
		queue.Remove(player)        // –£–¥–∞–ª—è–µ–º –∏–∑ –æ—á–µ—Ä–µ–¥–∏
		sessions.Unregister(player) // –£–¥–∞–ª—è–µ–º –∏–∑ —Å–µ—Å—Å–∏–π
		ws.Close()                  // –ó–∞–∫—Ä—ã–≤–∞–µ–º —Å–æ–∫–µ—Ç
	}()

	// 4. –õ–æ–≥–∏–∫–∞ –ú–∞—Ç—á–º–µ–π–∫–∏–Ω–≥–∞
	fmt.Printf("Player %s (üèÜ%d) joined. Online: %d\n", player.ID, player.Trophies, sessions.Count())

	opponent := queue.FindAndRemoveOpponent(player)
	if opponent != nil {
		// –ú–∞—Ç—á –Ω–∞–π–¥–µ–Ω –º–≥–Ω–æ–≤–µ–Ω–Ω–æ
		startMatch(player, opponent)
	} else {
		// –î–æ–±–∞–≤–ª—è–µ–º –≤ –æ—á–µ—Ä–µ–¥—å
		queue.Add(player)
		log.Printf("Player %s added to queue", player.ID)
	}

	// 5. Keep-Alive Loop (–û–∂–∏–¥–∞–Ω–∏–µ)
	// –ú—ã –∑–∞–ø—É—Å–∫–∞–µ–º —á—Ç–µ–Ω–∏–µ –≤ —Ü–∏–∫–ª–µ, —á—Ç–æ–±—ã –ª–æ–≤–∏—Ç—å Ping/Pong –∏ Disconnect.
	// –ï—Å–ª–∏ –º–∞—Ç—á –Ω–∞—á–Ω–µ—Ç—Å—è, —ç—Ç–æ—Ç —Ü–∏–∫–ª –≤—Å—ë —Ä–∞–≤–Ω–æ –¥–æ–ª–∂–µ–Ω —Ä–∞–±–æ—Ç–∞—Ç—å, —á—Ç–æ–±—ã –¥–µ—Ä–∂–∞—Ç—å —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ.
	for {
		_, _, err := ws.ReadMessage()
		if err != nil {
			if websocket.IsUnexpectedCloseError(err, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
				log.Printf("Player %s disconnected unexpectedly: %v", player.ID, err)
			} else {
				log.Printf("Player %s disconnected", player.ID)
			}
			break // –í—ã—Ö–æ–¥ –∏–∑ —Ü–∏–∫–ª–∞ -> —Å—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç defer cleanup()
		}
	}
}

// --- GAME LOGIC ---

func startMatch(p1, p2 *Player) {
	log.Printf("MATCH START: %s vs %s", p1.ID, p2.ID)

	roomID := fmt.Sprintf("room_%s_%s", p1.ID, p2.ID)

	// –§–æ—Ä–º–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç—ã
	resp1 := &pb.MatchFoundResponse{
		OpponentId:       p2.ID,
		OpponentTrophies: p2.Trophies,
		RoomId:           roomID,
	}

	resp2 := &pb.MatchFoundResponse{
		OpponentId:       p1.ID,
		OpponentTrophies: p1.Trophies,
		RoomId:           roomID,
	}

	// –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ, —á—Ç–æ–±—ã –Ω–µ –±–ª–æ—á–∏—Ç—å –ø–æ—Ç–æ–∫
	go sendProto(p1, resp1)
	go sendProto(p2, resp2)
}

func sendProto(p *Player, msg proto.Message) {
	data, err := proto.Marshal(msg)
	if err != nil {
		log.Println("Marshal error:", err)
		return
	}

	p.Conn.SetWriteDeadline(time.Now().Add(writeWait))
	if err := p.Conn.WriteMessage(websocket.BinaryMessage, data); err != nil {
		log.Printf("Failed to send to %s: %v", p.ID, err)
		// –ï—Å–ª–∏ –Ω–µ —É–¥–∞–ª–æ—Å—å –æ—Ç–ø—Ä–∞–≤–∏—Ç—å - –∑–∞–∫—Ä—ã–≤–∞–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ, —Å—Ä–∞–±–æ—Ç–∞–µ—Ç cleanup
		p.Conn.Close()
	}
}

// --- SESSION MANAGER IMPLEMENTATION ---

func (sm *SessionManager) Register(p *Player) {
	sm.mu.Lock()
	defer sm.mu.Unlock()

	// –ï—Å–ª–∏ —Å–µ—Å—Å–∏—è —Å —Ç–∞–∫–∏–º ID —É–∂–µ –µ—Å—Ç—å ‚Äî —É–±–∏–≤–∞–µ–º —Å—Ç–∞—Ä—É—é
	if oldPlayer, exists := sm.sessions[p.ID]; exists {
		log.Printf("Duplicate login for %s. Kicking old session.", p.ID)
		// –ó–∞–∫—Ä—ã—Ç–∏–µ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è –≤—ã–∑–æ–≤–µ—Ç –æ—à–∏–±–∫—É ReadMessage –≤ —Å—Ç–∞—Ä–æ–π –≥–æ—Ä—É—Ç–∏–Ω–µ,
		// —á—Ç–æ –ø—Ä–∏–≤–µ–¥–µ—Ç –∫ cleanup() —Å—Ç–∞—Ä–æ–≥–æ –∏–≥—Ä–æ–∫–∞.
		oldPlayer.Conn.Close()
	}

	sm.sessions[p.ID] = p
}

func (sm *SessionManager) Unregister(p *Player) {
	sm.mu.Lock()
	defer sm.mu.Unlock()

	// –£–¥–∞–ª—è–µ–º —Ç–æ–ª—å–∫–æ –µ—Å–ª–∏ —ç—Ç–æ —Ç–∞ –∂–µ —Å–∞–º–∞—è —Å–µ—Å—Å–∏—è (pointer check)
	// –≠—Ç–æ –∑–∞—â–∏—Ç–∞ –æ—Ç race condition, –∫–æ–≥–¥–∞ –Ω–æ–≤—ã–π –∏–≥—Ä–æ–∫ –∑–∞—à–µ–ª, –∞ —Å—Ç–∞—Ä—ã–π –≤—ã—Ö–æ–¥–∏—Ç
	if stored, exists := sm.sessions[p.ID]; exists && stored == p {
		delete(sm.sessions, p.ID)
	}
}

func (sm *SessionManager) Count() int {
	sm.mu.RLock()
	defer sm.mu.RUnlock()
	return len(sm.sessions)
}

// --- QUEUE MANAGER IMPLEMENTATION ---

func (qm *QueueManager) Add(p *Player) {
	qm.mu.Lock()
	defer qm.mu.Unlock()
	qm.pool = append(qm.pool, p)
}

func (qm *QueueManager) Remove(p *Player) {
	qm.mu.Lock()
	defer qm.mu.Unlock()

	// "–£–¥–∞–ª–µ–Ω–∏–µ –∏–∑ —Å–ª–∞–π—Å–∞ —Å —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ–º –ø–æ—Ä—è–¥–∫–∞" (Filter in-place)
	// –≠—Ç–æ O(N), –Ω–æ –Ω–∞–¥–µ–∂–Ω–æ –¥–ª—è –º–∞—Ç—á–µ–π.
	n := 0
	for _, x := range qm.pool {
		// –û—Å—Ç–∞–≤–ª—è–µ–º –∏–≥—Ä–æ–∫–∞, —Ç–æ–ª—å–∫–æ –µ—Å–ª–∏ —ç—Ç–æ –ù–ï —Ç–æ—Ç, –∫–æ–≥–æ –º—ã —É–¥–∞–ª—è–µ–º
		if x != p {
			qm.pool[n] = x
			n++
		}
	}
	// –û–±—Ä–µ–∑–∞–µ–º —Ö–≤–æ—Å—Ç (garbage collection friendly)
	for i := n; i < len(qm.pool); i++ {
		qm.pool[i] = nil
	}
	qm.pool = qm.pool[:n]
}

func (qm *QueueManager) FindAndRemoveOpponent(seeker *Player) *Player {
	qm.mu.Lock()
	defer qm.mu.Unlock()

	for i, candidate := range qm.pool {
		// –ù–µ–ª—å–∑—è –∏–≥—Ä–∞—Ç—å —Å —Å–∞–º–∏–º —Å–æ–±–æ–π (–Ω–∞ –≤—Å—è–∫–∏–π —Å–ª—É—á–∞–π)
		if candidate.ID == seeker.ID {
			continue
		}

		// –õ–æ–≥–∏–∫–∞ –∫—É–±–∫–æ–≤
		diff := int32(math.Abs(float64(seeker.Trophies - candidate.Trophies)))
		if diff <= 100 {
			// –£–¥–∞–ª—è–µ–º —Å–æ–ø–µ—Ä–Ω–∏–∫–∞ –∏–∑ –æ—á–µ—Ä–µ–¥–∏
			qm.pool = append(qm.pool[:i], qm.pool[i+1:]...)
			return candidate
		}
	}
	return nil
}
